--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ https://templatemo.com/tm-535-softy-pinko
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="#welcome" class="active">Home</a></li>
-                            <li><a href="#features">About</a></li><!--
+                            <li><a href="#features">About</a></li>
                             <li><a href="#work-process">Work Process</a></li>
-                            <li><a href="#testimonials">Testimonials</a></li>
-                            <li><a href="#pricing-plans">Pricing Tables</a></li>
-                            <li><a href="#blog">Blog Entries</a></li>-->
+                            <li><a href="#testimonials">Our Team</a></li>
+                            <li><a href="#pricing-plans">Pricing</a></li>
+                            <li><a href="#blog">Our Tech</a></li>
                             <li><a href="#contact-us">Contact Us</a></li>
                         </ul>
                         <a class='menu-trigger'>
