--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Wacky Menace is a person, not a place or anything else, kindly be careful. Thankyou Wacky!">
     <meta name="author" content="Wacky Menace">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
-    <link rel="icon" sizes="16x16" type="image/png" src="https://wackymenace.netlify.app/assets/images/logom.png">
+    <link rel="icon" href="https://wackymenace.netlify.app/assets/images/logom.png" type="image/png" sizes="16x16">
     <title>Wacky Menace!! Hee Haw</title>
 <!--
 SOFTY PINKO
